# single-python-file-reviewer

./: .gitignore  README.md  pyproject.toml
reviewer/: __init__.py  aggregator.py  chunker.py  cli.py  io_utils.py  models.py  opencode_client.py  prompts.py  reporter.py  static_analyzer.py
tests/: test_aggregator.py  test_chunker.py  test_e2e.py  test_io_utils.py  test_opencode_client.py  test_static_analyzer.py
tests/fixtures/: make_synthetic_5k.py  small_app.py  synthetic_5k.py
