[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "single-python-file-reviewer"
version = "0.1.0"
description = "Tkinter-focused single-file Python code review harness for weak LLMs via opencode CLI"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["reviewer*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
